# hello

./: CMakeLists.txt  LICENSE  README.md  main.cpp
c++/include/: AlleleSearcherLiteFiltered.h  Arrays.h  Read.h  Reference.h  Trie.h  leftAlignCigars.h  utils.h
c++/src/: AlleleSearcherLiteFiltered.cpp  Read.cpp  Reference.cpp  Trie.cpp  leftAlignCigars.cpp  utils.cpp
models/: .gitattributes  README.md  copy_models.sh  pacbio_multi_coverage_mapq_threshold_hg002_with_hp_tags_separate_train_val_2021_04_30_201011.dp_model.wrapper.dnn
python/: AlleleSearcher.py  AlleleSearcherDNN.py  AlleleSearcherLite.py  AnnotateRegions.py  Attention.py  ConvCombiner250FeatureMap.py  ConvCombinerResNetDeeper.py  ExpertAlleleConvolver250FeatureMap.py  ExpertAlleleConvolverDeeper.py  ExpertGraphConvolver250FeatureMap.py  ExpertGraphConvolverDeeper.py  HotspotDetector.py  HotspotDetectorDVFiltered.py  LRSchedulers.py  MemmapData.py  MemmapDataLite.py  MemmapDatasetLoader.py  MetaCombiner250FeatureMap.py  MetaCombinerDeeper.py  MixtureOfExperts.py  MixtureOfExpertsAdvanced.py  MixtureOfExpertsAdvancedXferLearning.py  MixtureOfExpertsDNNFast.py  MixtureOfExpertsDNNFastDistributed.py  MixtureOfExpertsDNNFastXferLearning.py  MixtureOfExpertsTools.py  MoEMergedConfig250FeatureMap.py  MoEMergedConfigAdvancedResNetDeeper.py  MoEReadConvolver250FeatureMap.py  MoEReadConvolverDeeper.py  NNTools.py  PileupContainer.py  PileupContainerLite.py  PileupDataTools.py  PySamFastaWrapper.py  ReadConvolver.py  ReferenceCache.py  call.py  caller.py  caller_calling.py  (+31 more)
python/architectures/: combiner_add.py  (+41 more)
